import React from 'react';
import Enzyme, { mount } from 'enzyme';
import Adapter from 'enzyme-adapter-react-16';
import renderer from 'react-test-renderer';
import noop from '../../helpers/noop';
import AccordionTrigger from '../customElements/AccordionTrigger';

Enzyme.configure({ adapter: new Adapter() });
const qaHook = 'test-id';

const renderTrigger = overrideProps => (
  <AccordionTrigger
    toggleLabel="Toggle"
    primaryHeading="John Smith"
    updateOpenAccordionItem={noop}
    onItemClick={noop}
    updateOpenId={noop}
    getItemData={noop}
    {...overrideProps}
  />
);

describe('<XUIAccordion /> | Accordion Trigger', () => {
  it('should render an automation id when passed in the qaHook prop', () => {
    const component = renderer.create(renderTrigger({ qaHook }));

    expect(component).toMatchSnapshot();
  });

  it('should render closed', () => {
    const component = renderer.create(renderTrigger());

    expect(component).toMatchSnapshot();
  });

  it('should render open', () => {
    const component = renderer.create(renderTrigger({ isOpen: true }));

    expect(component).toMatchSnapshot();
  });

  it('should render with available props', () => {
    const leftContent = <abbr role="presentation">GB</abbr>;
    const secondaryHeading = (
      <div>
        <span>Nodes!</span>
        <br />
        Plain text
      </div>
    );

    const action = <button>Action</button>;
    const overflow = <button>...</button>;
    const custom = <div>Custom content</div>;
    const pinnedValue = '00:00';
    const component = renderer.create(
      renderTrigger({ leftContent, secondaryHeading, action, overflow, custom, pinnedValue }),
    );

    expect(component).toMatchSnapshot();
  });

  it('should call onClick handler', () => {
    const onItemClick = jest.fn();
    const component = mount(renderTrigger({ qaHook, onItemClick }));

    component.find(`[data-automationid="${qaHook}"]`).simulate('click');
    expect(onItemClick).toHaveBeenCalled();
  });

  it('should call onClick handler on keydown for space and enter', () => {
    const onItemClick = jest.fn();
    const component = mount(renderTrigger({ qaHook, onItemClick }));
    const keyPressNode = component.find(`[data-automationid="${qaHook}"]`);
    const keys = [' ', 'Enter'];

    keys.forEach(key => keyPressNode.simulate('keyPress', { key }));
    expect(onItemClick).toHaveBeenCalledTimes(2);
  });

  it('should not call onClick handler when clicking on overflow contents', () => {
    const buttonQaHook = `${qaHook}-button`;
    const onClick = jest.fn();
    const overflow = <button data-automationid={buttonQaHook}>...</button>;
    const component = mount(renderTrigger({ overflow, qaHook }));

    component.find(`[data-automationid="${buttonQaHook}"]`).simulate('click');
    expect(onClick).not.toHaveBeenCalled();
  });

  it('should not call onClick handler when clicking on action contents', () => {
    const buttonQaHook = `${qaHook}-button`;
    const onClick = jest.fn();
    const action = <button data-automationid={buttonQaHook}>...</button>;
    const component = mount(renderTrigger({ qaHook, action }));

    component.find(`[data-automationid="${buttonQaHook}"]`).simulate('click');
    expect(onClick).not.toHaveBeenCalled();
  });
});
